# psycho

./: README.md  pyproject.toml
.demo/: youtube-presentation.json
.demo/youtube-presentation/: 01-introduction.md  02-a-lot-has-changed.md  03-tool-envy.md  04-buyers-remorse.md  05-re-enter-setuptools.md  06-missing-tooling.md  07-project-layout.md  08-pyproject-file.md  09-lets-go-psycho.md  10-installing-dependencies.md  11-publishing-packages.md  12-outro.md  layout.html
scratch/: example1.py  pep508.parsley
src/psycho/: building.py  click_types.py  commands.py  dependencies.py  environment.py  initializing.py  paths.py  projects.py  publishing.py  uploading.py
src/psycho/data/: gitignore.txt
